[project]
name = "battle"
version = "0.0.1"

description = "Battle package for BallsDex"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name="hiboman", email="hiboman@proton.me" },
]
readme = "README.md"

# dependencies = [
#     "ballsdex>=3.0.0",
# ]

[project.urls]
Repository = "https://github.com/hiboman/BallsDex-Battle-Pack"
Documentation = "https://github.com/hiboman/BallsDex-Battle-Pack#readme"
Issues = "https://github.com/hiboman/BallsDex-Battle-Pack/issues"
